Adicionei o efeito hover no button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
                 <body>  
                 <header> <!--Cabeçalho (é sempre com a tag header)-->
-                    <img class="logo" src="assets/logo.png" alt="walter cassule">
+                    <img class="logo" src="assets/logo2.png" alt="walter cassule">
 
                     <nav>
                         <a href="">Skils</a>
