Criei a pasta component e arquivo title organi css

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
                         <link rel="stylesheet" href="CSS/reset.css">
                         <link rel="stylesheet" href="CSS/indexx.css">
+                        <link rel="stylesheet" href="CSS/components/title.css">
                         
                     </head>
 
