Criei uma tag <h1> no html e criei uma nova pasta css, component e um arq.title.css para organização do css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <header> <!--Cabeçalho (é sempre com a tag header)-->
                         <img class="logo" src="assets/logo2.png" alt="walter cassule">
 
-                        <nav>
+                        <nav> <!--Tag para fazer listagem,no caso aqui do menu-->
                             <a href="">Skils</a>
                             <a href="">Projectos</a>
                             <a href="">Sobre</a>
@@ -26,7 +26,7 @@
                             <a id="button" href="">Download CV</a> 
                         </nav>
                     </header>
-                    <h1>Walter Cassule</h1>
+                    <h1>Walter Cassule</h1> <!--Tag para Title-->
                     </body>   
                     </html>
                 
