--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
                         </nav>
                     </header>
                     <h1>Walter Cassule</h1> <!--Tag para Title-->
+
+                    <h2>Desenvolvidor Front End e Agente de Viagens</h2>
                     </body>   
                     </html>
                 
