--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
                         <link rel="stylesheet" href="CSS/reset.css">
                         <link rel="stylesheet" href="CSS/indexx.css">
                         <link rel="stylesheet" href="CSS/components/title.css">
+                        <link rel="stylesheet" href="CSS/components/subtatle.css">
                         
                     </head>
 
