Criei a <div> para a box do title e subtitle

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                     <h1>Walter Cassule</h1> <!--Tag para Title-->
 
                     <h2>Desenvolvidor Front End e Agente de Viagens</h2>
+
+                    <div id="box"></div>
                     </body>   
                     </html>
                 
