--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
                         <link rel="stylesheet" href="CSS/indexx.css">
                         <link rel="stylesheet" href="CSS/components/title.css">
                         <link rel="stylesheet" href="CSS/components/subtatle.css">
-                        
+                        <link rel="stylesheet" href="CSS/components/box.css">
+
                     </head>
 
                     <body>  
