Estilizei o component box

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                             <a id="button" href="">Download CV</a> 
                         </nav>
                     </header>
-                    <h1>Walter Cassule</h1> <!--Tag para Title-->
-
-                    <h2>Desenvolvidor Front End e Agente de Viagens</h2>
-
-                    <div id="box"></div>
+                     
+                    <div id="box"> <!--Tag div serve para formar a caixa e h1, h2  para Title e subtitle-->
+                        <h1>Walter Cassule</h1>
+                        <h2>Dev FrontEnd/Agente de viagens</h2>
+                    </div>
                     </body>   
                     </html>
                 
