--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                         <link rel="stylesheet" href="CSS/components/title.css">
                         <link rel="stylesheet" href="CSS/components/subtatle.css">
                         <link rel="stylesheet" href="CSS/components/box.css">
+                        <link rel="stylesheet" href="CSS/components/button.css">
 
                     </head>
 
@@ -25,7 +26,7 @@
                             <a href="">Projectos</a>
                             <a href="">Sobre</a>
                             <a href="">Contactos</a>
-                            <a id="button" href="">Download CV</a> 
+                            <a class="button" href="">Download CV</a> 
                         </nav>
                     </header>
                      
@@ -33,6 +34,9 @@
                         <h1>Walter Cassule</h1>
                         <h2>Dev FrontEnd/Agente de viagens</h2>
                     </div>
+
+                    <a class="button" href="">Download CV</a> 
+                    <a class="button" href="">Contactos</a> 
                     </body>   
                     </html>
                 
