adicionei duas pastas

--- a/index.html
+++ b/index.html
@@ -14,18 +14,24 @@
                         <link rel="stylesheet" href="CSS/components/subtatle.css">
                         <link rel="stylesheet" href="CSS/components/box.css">
                         <link rel="stylesheet" href="CSS/components/button.css">
+                        <link rel="stylesheet" href="CSS/components/action.css">
+                        <link rel="stylesheet" href="CSS/components/header.css">
+
+
+
+
 
                     </head>
 
                     <body>  
-                    <header> <!--Cabeçalho (é sempre com a tag header)-->
+                    <header class="header">  <!--Cabeçalho (é sempre com a tag header)-->
                         <img class="logo" src="assets/logo2.png" alt="walter cassule">
 
                         <nav> <!--Tag para fazer listagem,no caso aqui do menu-->
-                            <a href="">Skils</a>
-                            <a href="">Projectos</a>
-                            <a href="">Sobre</a>
-                            <a href="">Contactos</a>
+                            <a class="action" href="">Skils</a>
+                            <a class="action" href="">Projectos</a>
+                            <a class="action" href="">Sobre</a>
+                            <a class="action" href="">Contactos</a>
                             <a class="button" href="">Download CV</a> 
                         </nav>
                     </header>
