organizei as clesses

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                         <link rel="stylesheet" href="CSS/components/button.css">
                         <link rel="stylesheet" href="CSS/components/action.css">
                         <link rel="stylesheet" href="CSS/components/header.css">
+                        
 
 
 
@@ -36,9 +37,9 @@
                         </nav>
                     </header>
                      
-                    <div id="box"> <!--Tag div serve para formar a caixa e h1, h2  para Title e subtitle-->
-                        <h1>Walter Cassule</h1>
-                        <h2>Dev FrontEnd/Agente de viagens</h2>
+                    <div class="box"> <!--Tag div serve para formar a caixa e h1, h2  para Title e subtitle-->
+                        <h1 class="title">Walter Cassule</h1>
+                        <h2 class="subtatle">Dev FrontEnd</h2>
                     </div>
 
                     <a class="button" href="">Download CV</a> 
