fiz a variação do componente title com second

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         </div>
                     </section>
                         
-
+                <h2 class="title -second">Habilidades</h2>
             </body>   
             </html>
                     
