Adicionei o progress do logo do html

--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@
 
                 <section class="section">    
                 <h2 class="title -second">Habilidades</h2>
+
+                <dl> <!--descreption list-->
+                    <dl>HTML</dl>
+                    <dd><img src="assets/ico_html5.png" alt="Logo da HTML5 em pixel arte">
+                    </dd>
+                    <add>
+                         <progress max="60%" value="65%">
+
+                         </add>
+
+                </dl>
             </section>
             </body>   
             </html>
