criei o card-projectos

--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
                     </div>
                 </articule>
             </div>
-            </body>
+            <section class="section">
+               
+            </section>
             </body>   
             </html>
                     
