finalizei a componente proecto

--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@
                     </div>
                 </articule>
             </div>
-            <section class="section">
-               
+            <section class="section -bgBlack -bdFirst">
+                <h2 class="main-title -second">Projectos</h2> 
+                <p>Até ao momento esse é o meu primeiro projecto e em breve começarei um outro Projecto de final do Curso.</p>
             </section>
             </body>   
             </html>
